# timeline-pilot

./: .gitignore  Makefile  README.md  blueprint.md  docker-compose.development.yml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/Chat/: Chat.css  Chat.tsx
client/src/components/Map/: Map.tsx
server/: models.py  pyproject.toml  routes.py
server/migrations/: env.py
server/migrations/versions/: aa4e831909f7_location.py
