[tool.poetry]
name = "timeline-pilot"
version = "0.0.1"
description = ""
authors = ["Francesco Meli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
google-generativeai = "^0.7.2"
geoalchemy2 = {extras = ["shapely"], version = "^0.15.2"}
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"